@@ -2,6 +2,7 @@ java \
 	-Djava.security.egd=file:/dev/./urandom \
 	"-Xmx${JASPER_HEAP:-512m}" \
 	"-Xms${JASPER_HEAP:-512m}" \
+	-XX:+UseZGC \
 	-XX:+UseStringDeduplication \
 	-XX:+UseCompactObjectHeaders \
 	org.springframework.boot.loader.launch.JarLauncher
